# moondawg-ros

./: .gitignore  .gitmodules  README.md
scripts/: add_ros_sources.sh  install_auto_start.sh  install_autostart.sh  install_dependencies.sh  install_deps.sh  install_hosted_website.sh  install_ipc_dependencies.sh  install_ros.sh
src/lunabot_sim/: CMakeLists.txt  README.md  package.xml  setup.py
src/lunabot_sim/config/: omnibot.rviz  omnibot_controllers.yaml
src/lunabot_sim/lunabot_sim/: gazebo_controller_bridge.py
src/lunabot_sim/models/: omnibot.urdf
src/moondawg/: package.xml  setup.cfg  setup.py
src/moondawg-camera/: CMakeLists.txt  package.xml
src/moondawg-camera/include/: camera_component.hpp  camera_node.hpp  image_compression_node.hpp
src/moondawg-camera/src/: camera_component.cpp  camera_node.cpp  camera_node_main.cpp  image_compression_node.cpp
src/moondawg-control/: package.xml  setup.cfg  setup.py
src/moondawg-launch/launch/: moondawg.launch.py
src/moondawg/behavior_trees/: excavate_mission.xml
src/moondawg/config/: moondawg_params.yaml  nav2_params.yaml
src/moondawg/launch/: moondawg.launch.py
src/moondawg/moondawg/: camera_node.py  controller_node.py  controller_parser.py  diagnostics.py  i2c_node.py  movement_controller.py  movement_node.py  serial_bridge.py  serial_node.py  string_gen.py  xbox_translator.py
src/moondawg/resource/: moondawg
src/moondawg_autonomy/: CMakeLists.txt  setup.py
src/moondawg_autonomy/launch/: autonomy.launch.py
src/moondawg_autonomy/moondawg_autonomy/: mission_executor.py  navigation_node.py  perception_node.py
src/moondawg_camera/: CMakeLists.txt
src/moondawg_camera/include/: camera_component.hpp
src/moondawg_camera/src/: camera_component.cpp
src/moondawg_control/: setup.cfg  setup.py
src/moondawg_control/moondawg_control/: controller_parser.py  i2c_node.py  serial_node.py
src/moondawg_control/resource/: moondawg_control
src/moondawg_launch/: CMakeLists.txt  package.xml
src/moondawg_launch/launch/: moondawg.launch.py
src/moondawg_qr_reader/: package.xml  setup.cfg  setup.py
src/moondawg_qr_reader/moondawg_qr_reader/: qr_code_reader.py
src/py_lights/: package.xml  setup.cfg  setup.py
src/py_lights/py_lights/: hello.py  lights.py
src/py_lights_2/: package.xml  setup.cfg  setup.py
src/py_lights_2/py_lights_2/: hello.py  light_pub.py  light_sub.py  pub.py  sub.py
src/rpi_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rpi_pkg/rpi_pkg/: controller_node.py  movement_node.py
src/rpi_pkg/srv/: Move.srv
website/: image-utils.js  index.html  script.js
