<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moondawg</name>
  <version>1.0.0</version>
  <description>ROS2 package for controlling the SIU Lunabotics robot</description>
  <maintainer email="andrew.barnes@siu.edu">Andrew Barnes</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/SIU-Robotics/moondawg-ros</url>
  <author email="andrew.barnes@siu.edu">Andrew Barnes</author>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>image_tools</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
