<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moondawg_launch</name>
  <version>1.0.0</version>
  <description>MoonDawg Launch package for starting all nodes</description>
  
  <maintainer email="andrew.barnes@siu.edu">Andrew Barnes</maintainer>
  
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>moondawg_camera</exec_depend>
  <exec_depend>moondawg_control</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>image_tools</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
